--- a/app/views/contact_mailer/contact.html.erb
+++ b/app/views/contact_mailer/contact.html.erb
@@ -1,5 +1,6 @@
-<h1>Contact</h1>
-<%= @first_name %>
-<%= @last_name %>
-<%= @email %>
-<%= @message %>
+<h1>Vous avez été contacté depuis néotravail.fr</h1>
+
+<p>Prénom: <%= @first_name %></p>
+<p>Nom: <%= @last_name %></p>
+<p>Mail: <%= @email %></p>
+<p>Message: <%= @message %></p>
