--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -2,7 +2,8 @@
 <%= simple_form_for [ @contact ] do |f| %>
   <%= f.input :first_name, label: 'Nom' %>
   <%= f.input :last_name, label: 'Prénom' %>
-  <%= f.input :email, label: 'Votre message' %>
+  <%= f.input :email, label: 'Email' %>
+  <%= f.input :message, label: 'Votre message' %>
   <%= f.submit "Valider", class: "btn btn-success" %>
-  <%= link_to "Annuler", user_path(current_user), class: "btn btn-danger" %>
+  <%# <%= link_to "Annuler", user_path(current_user), class: "btn btn-danger" %> %>
 <% end %>
