--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -21,8 +21,8 @@
                 hint: "we need your current password to confirm your changes",
                 required: true,
                 input_html: { autocomplete: "current-password" } %>
-    <%= f.input :bio %>
-    <%= f.input :avatar %>
+    <%# <%= f.input :bio %>
+    <%# <%= f.input :avatar %>
   </div>
 
   <div class="form-actions">
