--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,8 +15,8 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
-    <%= f.input :bio %>
-    <%= f.input :avatar %>
+    <%# <%= f.input :bio %>
+    <%# <%= f.input :avatar %>
   </div>
 
   <div class="form-actions">
