--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -22,16 +22,22 @@
         <li class="nav-item <%= "active" if current_page?(contact_path) %>">
           <%= link_to "Contact", contact_path, class: "nav-link" %>
         </li>
-        <% if user_signed_in? %>
-          <li class="nav-item dropdown">
-            <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <%= link_to "Action", "#", class: "dropdown-item" %>
-              <%= link_to "Another action", "#", class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-            </div>
-          </li>
-        <% end %>
+
+        <%# ===================================================================================================== %>
+        <%# If user is used %>
+        <%# ===================================================================================================== %>
+        <%# <% if user_signed_in? %>
+          <%# <li class="nav-item dropdown"> %>
+            <%# <% i class="fa fa-user avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %></i>
+            <%# <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            <%# <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown"> %>
+              <%# <%= link_to "Action", "#", class: "dropdown-item" %>
+              <%# <%= link_to "Another action", "#", class: "dropdown-item" %>
+              <%# <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+            <%# </div> %>
+          <%# </li> %>
+        <%# <% end %>
+        <%# ===================================================================================================== %>
       </ul>
     </div>
 
