UP & ADD (contact mailer & BO) add index contact to BO + letter opener gem + byebug gem + add model and controller contact and related views

--- a/app/views/admin/admins/index.html.erb
+++ b/app/views/admin/admins/index.html.erb
@@ -10,7 +10,7 @@
     <div class="sidebar">
       <ul>
         <li>Dashbord</li>
-        <li>Blog</li>
+        <%# <li>Blog</li> %>
         <li><%= link_to "Episodes Podcast", admin_episodes_path%></li>
         <li><%= link_to "Contacts", admin_contacts_path%></li>
       </ul>
