--- a/app/views/layouts/administration.html.erb
+++ b/app/views/layouts/administration.html.erb
@@ -12,8 +12,11 @@
   </head>
 
   <body>
-    <%= render 'layouts/admin/header' %>
+    <%# <%= render 'layouts/admin/header' %>
     <%= render 'layouts/admin/sidebar' %>
-    <%= render 'layouts/admin/footer' %>
+    <div class="my-5">
+      <%= yield %>
+    </div>
+    <%# <%= render 'layouts/admin/footer' %>
   </body>
 </html>
